syntax = "proto3";


option java_multiple_files = true;
option java_package = "org.Muhammad.example.NightLight";
option java_outer_classname = "NightLightProto";

package NightLight;
/**
 * This is an example of a protobuf message.
 */

service Light{
    rpc LightOn(LightOnRequest) returns (LightOnResponse){};
    rpc LightOff(LightOffRequest) returns (LightOffResponse){};

}

message Lighting{
string light_on = 1;
string light_off = 2;
 
}

message LightOnRequest {
    Lighting lighting = 1;
}

message LightOnResponse {
    string lightstatus = 1;
}


message LightOffRequest {
    Lighting lighting = 1;
}

message LightOffResponse {
    string lightstatus = 1;
}



